--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.115.0
 uvicorn[standard]==0.32.0
 pymysql==1.1.1
 cryptography==43.0.3
-google-generativeai==0.8.3
+google-genai
 scikit-learn==1.5.2
 numpy==2.1.3
 python-dotenv==1.0.1
