--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.32.0
 pymysql==1.1.1
 cryptography==43.0.3
 google-genai
+tenacity==9.0.0
 scikit-learn==1.5.2
 numpy==2.1.3
 python-dotenv==1.0.1
